# tauri-zstd-updates

./: README.md  out-zstd.txt  out.txt  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
