[package]
name = "tauri-zstd-updates"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[profile.release]
panic = "abort"
lto = true
incremental = false
codegen-units = 1
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.12.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
